--- a/src/components/lottery/lottery.module.css
+++ b/src/components/lottery/lottery.module.css
@@ -2,8 +2,8 @@
     background-color: white;
     padding: 17px 12px 24px;
     border-radius: 3px;
-    height: 368px;
-    width: 296px;
+    min-height: 368px;
+    width: 298px;
     animation: feed 1s;
 }
 
@@ -13,10 +13,9 @@
     margin-bottom: 12px;
 }
 
-.fieldNumber {
-    display: inline-block;
-    margin-bottom: 8px;
-    margin-right: 8px;
+.fieldText {
+    display: flex;
+    gap: 8px;
 }
 
 .lotteryButton {
